white spacing issue solved

--- a/src/Subcomponents/Carousels/Collab/Carousel.sass
+++ b/src/Subcomponents/Carousels/Collab/Carousel.sass
@@ -27,6 +27,7 @@
     margin-top: 4%
     margin-left: auto
     margin-right: auto
+    overflow: hidden
     @media (max-width: 600px)
         margin-bottom: 15%
         margin-top: 7%
